# PolyWave

./: CMakeLists.txt  LICENSE  README.md  WaveMesh.cpp  WaveMesh.h  main.cpp
include/glad/: glad.c  glad.h
shaders/: shader.frag  shader.vert
